# black_jack

./: .gitignore  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: main.yml
app/: settings.py
app/common/: logger.py
app/config/: logging.ini  settings.py
app/core/admin/: dto.py  entities.py
app/core/admin/exceptions/: __init__.py  gateway.py
app/core/admin/handlers/: __init__.py  create_admin.py  get_admin_by_email.py  login.py
app/core/admin/protocols/: __init__.py  admin_gateway.py  login_admin_service.py
app/core/admin/services/: __init__.py  login_admin.py
app/core/chat/: dto.py  entities.py  exceptions.py  handlers.py  protocols.py
app/core/common/: entity.py  handler.py
app/core/common/protocols/: __init__.py  commiter.py  hasher_password_service.py
app/core/common/services/: __init__.py  hasher_password.py
app/core/game/dto/: __init__.py  game.py  player.py
app/core/game/entities/: __init__.py  card.py  game.py  game_state.py  player.py  player_cards.py
app/core/game/exceptions/: __init__.py  chat.py  player.py
app/core/game/execprions/: __init__.py
app/core/game/handlers/: __init__.py  add_player.py  create.py  create_game.py  delete_player.py  game_over.py  get_card.py  get_game_by_chat_tg_id.py  get_game_players.py  get_game_state.py  get_player.py  get_user_stats_on_games.py  save_player_results.py  start_game.py  update_game_state.py  update_player_bet.py  update_player_state.py
app/core/game/protocols/: __init__.py  game_gateway.py  game_state_gateway.py  player_cards_gateway.py  player_gateway.py
app/core/player/entities/: __init__.py  player.py  turn.py
app/core/user/: entities.py
app/core/user/dto/: __init__.py  user.py
app/core/user/exceptions/: __init__.py
app/core/user/handlers/: __init__.py  get_top_users.py  register.py  (+2 more)
app/di/: __init__.py  container.py  setup.py
app/infrastructure/rabbitmq/: build.py  main.py  publisher.py  tg_poller.py  tg_updates.py
app/infrastructure/tg_api/: __init__.py  bot.py  dto.py  handler.py  handler_update.py  poller.py  protocols.py  update_handler.py  updates.py
app/presentation/admin/: builders.py  common.py  main.py  middlewares.py  utils.py
app/presentation/api/: builders.py  common.py  main.py  middlewares.py
app/presentation/tg_bot/: build_di.py  loader.py  main.py  middlewares.py  states.py
deploy/: .env.dev.example  .env.prod.example  Dockerfile  Makefile.dev  Makefile.prod  admin_api.Dockerfile  alembic.ini  dev.docker-compose.yml  docker-compose.yml  prod.docker-compose.yml  rabbitmq.Dockerfile  tg_bot.Dockerfile
(+119 files in other folders)
